<resources>
    <string name="app_name">Traffic Monitoring</string>

    <string name="title_activity_main">DateTimePicker Example</string>
    <string name="selected_time">The time you picked will be shown here.</string>
    <string name="selected_date">The date you picked will be shown here.</string>
    <string name="selected_datetime">The date and time you picked will be shown here.</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_datetime">Pick Date+Time</string>
    <string name="mode_24_hours">Use 24 hour mode</string>
    <string name="mode_dark">Use dark theme</string>
    <string name="mode_custom_accent">Use custom accent</string>
    <string name="vibrate">Vibrate on touch</string>
    <string name="dismiss">Dismiss on pause (eg: orientation change)</string>
    <string name="title">Show a title</string>
    <string name="show_version_2">Use marshmallow layout</string>
    <string name="show_year_first">Show the year picker first</string>
    <string name="enable_seconds">Show seconds picker</string>
    <string name="enable_minutes">Show minutes picker</string>
    <string name="limit_times">Limit selectable times</string>
    <string name="limit_dates">Limit selectable dates</string>
    <string name="disable_dates">Disable specific dates</string>
    <string name="highlight_dates">Highlight certain dates</string>
    <string name="action_settings">Settings</string>

    <string name="tab_1">Traffic</string>
    <string name="tab_2">Speed</string>
    <string name="tab_3">Settings</string>

    <string name="upload_data">Upload data</string>
    <string name="download_data">Download data</string>

    <string name="mb"> Mb</string>
    <string name="used">Used </string>

    <string name="day">Day</string>
    <string name="month">Month</string>

    <string name="have_left">Have_left data</string>
    <string name="used_traffic">Used data</string>

    <string name="ms">ms</string>
    <string name="ping">Ping</string>
    <string name="download_speed">Download</string>
    <string name="upload_speed">Upload</string>

    <string name="mbps">Mbps</string>
    <string name="start_test">Start test!</string>

    <string name="set_period">Set period</string>
    <string name="set_data">Set data level</string>
    <string name="stopData">Disable access </string>
    <string name="levelWarning">Warning level</string>
    <string name="levelStop">Stop level</string>
    <string name="showMessege">Show Messege</string>
    <string name="set_alert_infinity">Set alert non-finite</string>
    <string name="alert">Alert!</string>

    <string name="setDate">Set date begin</string>
    <string name="setDateButton">Set date</string>
    <string name="currentDate">Current Date</string>

    <string name="notyAllert1">Warning!Used </string>
    <string name="notyAllert2">Mb data</string>
    <string name="notyStop">Attention! The limit is reached!</string>

    <string name="used_all">All used data</string>
    <string name="used_3G">Mobile data</string>
    <string name="used_WIFI">WiFi data</string>

    <string name="app_data">App data</string>
    <string name="traffic">Traffic</string>
    <string name="version_app">Version App</string>
    <string name="default_notification_channel_id">default_id</string>
    <string name="cancel">Cancel</string>
    <string name="make_request">Make Request</string>
    <string name="make_request2">Go to settings</string>
    <string name="need_permissions">Need permissions!</string>
    <string name="need_permissions_text">This application must be granted permission to view data online and view data on your phone. Attention, this application does not manage phone calls. This permission is needed ONLY to receive data in the used network traffic.</string>
    <string name="need_permissions2_text">Also, to view data on used traffic, you must give permission to this application to view data about the network. Please go to the settings and enable this access.</string>



</resources>
