<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">
                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="122dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/card_margin"
                android:elevation="8dp"
                card_view:cardCornerRadius="@dimen/cardview_corner__radius"
                card_view:cardBackgroundColor="@color/cardview_color">
                 <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                     <RadioGroup
                            android:id="@+id/radioGroup1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/set_period"
                            android:layout_alignParentStart="true"
                            android:layout_marginTop="14dp">

                                <RadioButton
                                    android:id="@+id/button_month"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:checked="true"
                                    android:text="@string/month"
                                    android:theme="@style/MyRadioButton"
                                    android:layout_alignTop="@+id/radioGroup1"
                                    android:layout_alignParentStart="true"
                                    android:layout_weight="1"
                                    android:textColor="@color/color_white" />

                                <RadioButton
                                    android:id="@+id/button_day"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:checked="true"
                                    android:text="@string/day"
                                    android:theme="@style/MyRadioButton"
                                    android:layout_below="@+id/count"
                                    android:layout_alignParentStart="true"
                                    android:textColor="@color/color_white" />

                        </RadioGroup>

                     <TextView
                         android:id="@+id/set_period"
                         android:text="@string/set_period"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingLeft="@dimen/album_title_padding"
                         android:paddingRight="@dimen/album_title_padding"
                         android:paddingTop="@dimen/album_title_padding"
                         android:textColor="@color/mdtp_done_text_color_dark_normal"
                         android:textSize="18sp"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
                         android:textStyle="bold" />

                 </RelativeLayout>
</android.support.v7.widget.CardView>
</LinearLayout>