<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:sample="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="8dp"
        card_view:cardCornerRadius="@dimen/cardview_corner__radius"
        card_view:cardBackgroundColor="@color/cardview_color"
        android:layout_height="260dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="260dp">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputDataLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/MyHintText"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_below="@+id/textView"
                android:layout_marginTop="12dp"
                android:layout_alignEnd="@+id/textView">
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text="@string/set_data"
                android:layout_width="wrap_content"
                android:textColor="@color/material_drawer_dark_header_selection_text"
                android:id="@+id/textView"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                style="@android:style/Widget.TextView"
                android:textStyle="bold" />

            <com.appyvet.rangebar.RangeBar
                android:id="@+id/rangebar"
                android:layout_marginLeft="1dp"
                sample:rangeBar="false"
                sample:tickStart="0"
                sample:tickEnd="100"
                sample:tickInterval="1"
                sample:barWeight="50dp"
                sample:pinRadius ="0dp"
                sample:tickColor="@color/icons"
                sample:pinColor="@color/icons"
                sample:selectorColor="@color/icons"
                sample:rangeBarColor="@color/cardview_color"
                sample:connectingLineColor="@color/icons"
                android:layout_width="wrap_content"
                android:layout_below="@+id/setAllert"
                android:layout_alignParentStart="true"
                android:layout_height="65dp"
                android:layout_alignEnd="@+id/textView" />

            <EditText
                android:id="@+id/inputDataStop"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="Введите"
                android:gravity="right"
                android:textColor="@color/colorTest"
                android:theme="@style/MyEditText"
                android:layout_weight="1"

                android:layout_marginRight="25dp"
                android:layout_width="100dp"
                android:layout_alignBaseline="@+id/lableSetLevelStop"
                android:layout_alignBottom="@+id/lableSetLevelStop"
                android:layout_alignParentEnd="true"
                android:textColorHint="@color/md_blue_300" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/rangebar"
                android:layout_toEndOf="@+id/rangebar"
                android:layout_marginBottom="25dp"
                android:id="@+id/procent"
                android:layout_marginLeft="10dp"
                android:textColor="@color/color_white"/>



            <TextView
                android:text="@string/stopData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stopData"
                android:layout_alignBaseline="@+id/stopDataSwitch"
                android:layout_alignBottom="@+id/stopDataSwitch"
                android:layout_alignStart="@+id/setDataView"
                android:textColor="@color/colorTest"
                android:layout_marginStart="10dp" />

            <TextView
                android:text="@string/levelWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/material_drawer_header_selection_text"
                android:id="@+id/setDataView"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/stopDataSwitch"
                android:layout_alignStart="@+id/lableSetLevelStop" />

            <TextView
                android:text="@string/levelStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/material_drawer_header_selection_text"
                android:id="@+id/lableSetLevelStop"
                android:layout_marginTop="12dp"
                android:textSize="18sp"
                android:layout_marginLeft="5dp"
                android:layout_below="@+id/inputDataLayout"
                android:layout_alignStart="@+id/rangebar" />

            <TextView
                android:text="@string/showMessege"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:id="@+id/setAllert"
                android:layout_below="@+id/setDataView"
                android:layout_alignStart="@+id/setDataView"
                android:textColor="@color/colorTest"
                android:layout_marginStart="10dp" />

            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/stopDataSwitch"
                android:layout_below="@+id/lableSetLevelStop"
                android:theme="@style/MySwitch"
                android:layout_alignEnd="@+id/inputDataStop" />


            <EditText
                android:id="@+id/inputDataAllert"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="Введите"
                android:gravity="right"
                android:textColor="@color/colorTest"
                android:theme="@style/MyEditText"

                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_width="100dp"
                android:textColorHint="@color/md_blue_300"
                android:layout_alignBaseline="@+id/setDataView"
                android:layout_alignBottom="@+id/setDataView"
                android:layout_alignStart="@+id/inputDataStop" />

            <android.support.v7.widget.SwitchCompat
                android:layout_height="wrap_content"
                android:id="@+id/allertSwitch"
                android:layout_width="wrap_content"
                android:theme="@style/MySwitch"
                android:thumbTextPadding="25dp"
                android:switchMinWidth="56dp"
                android:layout_alignBaseline="@+id/setAllert"
                android:layout_alignBottom="@+id/setAllert"
                android:layout_alignEnd="@+id/inputDataAllert" />


        </RelativeLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>